fix: :lipstick: Fix issue with red string in note on mobile
Set a new value for top since 428px

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -3640,6 +3640,10 @@
                 transform: rotate(334deg);
                 left: -50%;
 
+                @media screen and (min-width: 428px) {
+                    top: 2.5rem;
+                }
+
                 @media screen and (min-width: 768px) {
                     width: calc(100vw * 2);
                     top: 23px;
